adicionando rota de update em sticky notes
